@@ -14,8 +14,17 @@ typedef struct
 								 * alignment */
 } interval;
 
+#ifdef __cplusplus
+extern          "C"
+{
+#endif
+
 extern interval *PGTYPESinterval_from_asc(char *, char **);
 extern char *PGTYPESinterval_to_asc(interval *);
 extern int	PGTYPESinterval_copy(interval *, interval *);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif   /* PGTYPES_INTERVAL */
